--- a/ranger/ranger/rc.conf
+++ b/ranger/ranger/rc.conf
@@ -318,6 +318,7 @@ map gqR edit ~/.config/ranger/rifle.conf
 map gqv edit ~/.vimrc
 map gqz edit ~/.oh-my-zsh/custom/K2.zsh
 map gqi edit ~/.config/i3/config
+map gqI edit ~/.i3/bumblebee-status/bumblebee-status
 map bg shell cp %f ~/.config/wall.png && feh --bg-fill %f
 map ge cd /etc
 map gu cd /usr
