Update | Configuração p/ polybar e afins, README.md totalmente total

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -123,7 +123,7 @@ set -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 set -g base-index 1
 set -g pane-base-index 1
-
+set-option -s set-clipboard off
 
 set-option -g repeat-time 0
 
