--- a/i3/i3/config
+++ b/i3/i3/config
@@ -2,6 +2,17 @@
 # -*- coding: utf-8 -*-
 
 set $mod Mod4
+set_from_resource $fg i3wm.color7 #f0f0f0
+set_from_resource $bg i3wm.color2 #f0f0f0
+
+# class                 border  backgr. text indicator child_border
+client.focused          $bg     $bg     $fg  $bg       $bg
+client.focused_inactive $bg     $bg     $fg  $bg       $bg
+client.unfocused        $bg     $bg     $fg  $bg       $bg
+client.urgent           $bg     $bg     $fg  $bg       $bg
+client.placeholder      $bg     $bg     $fg  $bg       $bg
+
+client.background       $bg
 
 font pango:'Inconsolata for Powerline' 10
 for_window [class="^.*"] border pixel 1
@@ -14,11 +25,10 @@ floating_modifier $mod
 bindsym $mod+Return exec termite
 
 # kill focused window
-bindsym $mod+Shift+q kill
+bindsym $mod+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
-
+bindsym $mod+d exec dmenu_run -nb "$fg" -nf "$bg" -sb "$bg" -sf "$fg"
 # change focus
 bindsym $mod+h focus left
 bindsym $mod+j focus down
@@ -99,7 +109,7 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 bindsym $mod+Shift+backspace reboot
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+o exit
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -124,13 +134,13 @@ bindsym $mod+r exec $term -e ranger
 bindsym $mod+Shift+Return exec $term -e tmux
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        font pango:Inconsolata for Powerline 10
-        position top
-        status_command ~/.i3/bumblebee-status/bumblebee-status -m spotify disk sensors cpu memory battery brightness pasink date time -p memory.format="{used}/{total}" brightness.wheel-up="light -A 5" brightness.wheel-down="light -U 5" disk.path=/ disk.format="{used}/{size}" time.format="%H:%M" spotify.format="{album} >> {title}" date.format="%d/%m/%Y" -t powerline
-        }
-exec --no-startup-id compton
-exec --no-startup-id feh --bg-fill ~/.config/wall.png
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+ exec --no-startup-id compton
+ # exec --no-startup-id feh --bg-fill ~/.config/wall.png
+ # exec --no-startup-id nm-applet
 # PrintScreen
  bindsym --release Print exec scrot ~/Pictures/Captura_de_tela_%Y-%m-%d-%T.png
  bindsym --release Shift+Print exec scrot -s ~/Pictures/Captura_de_area_%Y-%m-%d-%T.png
+ 
+
+
