minor update on rc.conf (ranger)

--- a/ranger/ranger/rc.conf
+++ b/ranger/ranger/rc.conf
@@ -646,6 +646,7 @@ copytmap <ESC> q Q w <C-c>
 map <C-f> fzf_select
 map gcs shell wal -i %f
 map gas cd /var/www/sig-arteris
+map gts cd /var/www/projeto-tic-solucoes
 map gaa cd /var/www/api-arteris
 map gqr edit ~/.config/ranger/rc.conf
 map gqp edit ~/.config/polybar/config
