--- a/ranger/ranger/rc.conf
+++ b/ranger/ranger/rc.conf
@@ -644,7 +644,7 @@ copytmap <ESC> q Q w <C-c>
 ## CUSTOM AREA
 # map bg shell cp %f ~/.config/wall.png && feh --bg-scale %f
 map <C-f> fzf_select
-map gcs shell wal -i %f
+map gcs shell wal -t -i %f
 map gas cd /var/www/sig-arteris
 map gts cd /var/www/projeto-tic-solucoes
 map gaa cd /var/www/api-arteris
