colorschemes do pywal funcionando no fuzzyfinder, habilitando extensão do airline pro vim pra barra do topo ficar powerline fuderosa também

--- a/i3/i3/config
+++ b/i3/i3/config
@@ -111,6 +111,7 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Shift+backspace reboot
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+o exit
+bindsym $mod+z mode "resize"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
