--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -19,6 +19,13 @@
 # == Options
 # ===================================================================
 
+# Which viewmode should be used?  Possible values are:
+#     miller: Use miller columns which show multiple levels of the hierarchy
+#     multipane: Midnight-commander like multipane view showing all tabs next
+#                to each other
+set viewmode miller
+#set viewmode multipane
+
 # How many columns are there, and what are their relative widths?
 set column_ratios 1,3,4
 
@@ -33,10 +40,10 @@ set show_hidden false
 # With "multiple", ranger will ask only if you delete multiple files at once.
 set confirm_on_delete multiple
 
-# Which script is used to generate file previews?
+# Use non-default path for file preview script?
 # ranger ships with scope.sh, a script that calls external programs (see
 # README.md for dependencies) to preview images, archives, etc.
-set preview_script ~/.config/ranger/scope.sh
+#set preview_script ~/.config/ranger/scope.sh
 
 # Use the external preview script or display simple plain text or image previews?
 set use_preview_script true
@@ -49,7 +56,7 @@ set automatically_count_files true
 set open_all_images true
 
 # Be aware of version control systems and display information.
-set vcs_aware true
+set vcs_aware false
 
 # State of the three backends git, hg, bzr. The possible states are
 # disabled, local (only show local info), enabled (show local and remote
@@ -72,6 +79,14 @@ set preview_images true
 #   Preview images in full color using iTerm2 image previews
 #   (http://iterm2.com/images.html). This requires using iTerm2 compiled
 #   with image preview support.
+#
+# * urxvt:
+#   Preview images in full color using urxvt image backgrounds. This
+#   requires using urxvt compiled with pixbuf support.
+#
+# * urxvt-full:
+#   The same as urxvt but utilizing not only the preview pane but the
+#   whole terminal window.
 set preview_images_method w3m
 
 # Use a unicode "..." character to mark cut-off filenames?
@@ -101,7 +116,7 @@ set status_bar_on_top false
 set draw_progress_bar_in_status_bar true
 
 # Draw borders around columns?
-set draw_borders true
+set draw_borders false
 
 # Display the directory name in tabs?
 set dirname_in_tabs false
@@ -117,14 +132,17 @@ set display_size_in_status_bar true
 set display_tags_in_all_columns true
 
 # Set a title for the window?
-set update_title true
+set update_title false
 
 # Set the title to "ranger" in the tmux program?
-set update_tmux_title true
+set update_tmux_title false
 
 # Shorten the title if it gets long?  The number defines how many
 # directories are displayed at once, 0 turns off this feature.
 set shorten_title 3
+
+# Show hostname in titlebar?
+set hostname_in_titlebar true
 
 # Abbreviate $HOME with ~ in the titlebar (first line) of ranger?
 set tilde_in_titlebar false
@@ -136,7 +154,7 @@ set max_console_history_size 50
 # Try to keep so much space between the top/bottom border when scrolling:
 set scroll_offset 8
 
-# Flush the input after each key hit?  (Noticable when ranger lags)
+# Flush the input after each key hit?  (Noticeable when ranger lags)
 set flushinput true
 
 # Padding on the right when there's no preview?
@@ -148,6 +166,10 @@ set padding_right true
 # instances but leads to *slight* performance loss.
 # When false, bookmarks are saved when ranger is exited.
 set autosave_bookmarks true
+
+# Save the "`" bookmark to disk.  This can be used to switch to the last
+# directory by typing "``".
+set save_backtick_bookmark true
 
 # You can display the "real" cumulative size of directories by using the
 # command :get_cumulative_size or typing "dc".  The size is expensive to
@@ -174,6 +196,12 @@ set xterm_alt_key false
 # Whether to include bookmarks in cd command
 set cd_bookmarks true
 
+# Changes case sensitivity for the cd command tab completion
+set cd_tab_case sensitive
+
+# Use smart tab completion with less typing? E.g. ":cd /f/b/b<tab>" yields ":cd /foo/bar/baz".
+set cd_tab_smart false
+
 # Avoid previewing files larger than this size, in bytes.  Use a value of 0 to
 # disable this feature.
 set preview_max_size 0
@@ -191,6 +219,23 @@ set idle_delay 2000
 # check all directories above the current one as well?
 set metadata_deep_search false
 
+# Clear all existing filters when leaving a directory
+set clear_filters_on_dir_change false
+
+# Disable displaying line numbers in main column
+set line_numbers false
+
+# Save tabs on exit
+set save_tabs_on_exit false
+
+# Enable scroll wrapping - moving down while on the last item will wrap around to
+# the top and vice versa.
+set wrap_scroll false
+
+# Set the global_inode_type_filter to nothing.  Possible options: d, f and l for
+# directories, files and symlinks respectively.
+set global_inode_type_filter
+
 # ===================================================================
 # == Local Options
 # ===================================================================
@@ -203,12 +248,14 @@ set metadata_deep_search false
 # == Command Aliases in the Console
 # ===================================================================
 
-alias e    edit
-alias q    quit
-alias q!   quitall
-alias qa   quitall
-alias qall quitall
-alias setl setlocal
+alias e     edit
+alias q     quit
+alias q!    quit!
+alias qa    quitall
+alias qa!   quitall!
+alias qall  quitall
+alias qall! quitall!
+alias setl  setlocal
 
 alias filter     scout -prt
 alias find       scout -aeit
@@ -216,7 +263,7 @@ alias mark       scout -mr
 alias unmark     scout -Mr
 alias search     scout -rs
 alias search_inc scout -rts
-alias travel     scout -aefiklst
+alias travel     scout -aefklst
 
 # ===================================================================
 # == Define keys for the browser
@@ -228,10 +275,12 @@ map     q quit
 copymap q ZZ ZQ
 
 map R     reload_cwd
+map F     set freeze_files!
 map <C-r> reset
 map <C-l> redraw_window
 map <C-c> abort
 map <esc> change_mode normal
+map ~ set viewmode!
 
 map i display_file
 map ? help
@@ -245,14 +294,16 @@ map !  console shell%space
 map @  console -p6 shell  %%s
 map #  console shell -p%space
 map s  console shell%space
-map r  chain draw_possible_programs; console open_with%space
+map r  chain draw_possible_programs; console open_with%%space
 map f  console find%space
 map cd console cd%space
 
 # Change the line mode
 map Mf linemode filename
 map Mi linemode fileinfo
+map Mm linemode mtime
 map Mp linemode permissions
+map Ms linemode sizemtime
 map Mt linemode metatitle
 
 # Tagging / Marking
@@ -267,6 +318,7 @@ map uV      toggle_visual_mode reverse=True
 
 # For the nostalgics: Midnight Commander bindings
 map <F1> help
+map <F2> console rename%space
 map <F3> display_file
 map <F4> edit
 map <F5> copy
@@ -309,12 +361,9 @@ map L     history_go 1
 map ]     move_parent 1
 map [     move_parent -1
 map }     traverse
+map )     jump_non
 
 map gh cd ~
-map gaa cd /var/www/api-arteris
-map gas cd /var/www/sig-arteris
-map gqr edit ~/.config/ranger/rc.conf
-map bg shell cp %f ~/.config/wall.png && feh --bg-scale %f
 map ge cd /etc
 map gu cd /usr
 map gd cd /dev
@@ -325,29 +374,32 @@ map gv cd /var
 map gm cd /media
 map gM cd /mnt
 map gs cd /srv
+map gt cd /tmp
 map gr cd /
 map gR eval fm.cd(ranger.RANGERDIR)
 map g/ cd /
 map g? cd /usr/share/doc/ranger
 
 # External Programs
-map e  edit
+map E  edit
 map du shell -p du --max-depth=1 -h --apparent-size
 map dU shell -p du --max-depth=1 -h --apparent-size | sort -rh
-map yp shell -f echo -n %d/%f | xsel -i; xsel -o | xsel -i -b
-map yd shell -f echo -n %d    | xsel -i; xsel -o | xsel -i -b
-map yn shell -f echo -n %f    | xsel -i; xsel -o | xsel -i -b
+map yp yank path
+map yd yank dir
+map yn yank name
 
 # Filesystem Operations
 map =  chmod
 
 map cw console rename%space
 map a  rename_append
-map A  eval fm.open_console('rename ' + fm.thisfile.basename)
-map I  eval fm.open_console('rename ' + fm.thisfile.basename, position=7)
+map A  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"))
+map I  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"), position=7)
 
 map pp paste
 map po paste overwrite=True
+map pP paste append=True
+map pO paste overwrite=True append=True
 map pl paste_symlink relative=False
 map pL paste_symlink relative=True
 map phl paste_hardlink
@@ -359,11 +411,13 @@ map dd cut
 map ud uncut
 map da cut mode=add
 map dr cut mode=remove
+map dt cut mode=toggle
 
 map yy copy
 map uy uncut
 map ya copy mode=add
 map yr copy mode=remove
+map yt copy mode=toggle
 
 # Temporary workarounds
 map dgg eval fm.cut(dirarg=dict(to=0), narg=quantifier)
@@ -387,7 +441,7 @@ map cm search_next order=mtime
 map ca search_next order=atime
 
 # Tabs
-map <C-n>     tab_new ~
+map <C-n>     tab_new
 map <C-w>     tab_close
 map <TAB>     tab_move 1
 map <S-TAB>   tab_move -1
@@ -395,7 +449,7 @@ map <A-Right> tab_move 1
 map <A-Left>  tab_move -1
 map gt        tab_move 1
 map gT        tab_move -1
-map gn        tab_new ~
+map gn        tab_new
 map gc        tab_close
 map uq        tab_restore
 map <a-1>     tab_open 1
@@ -409,7 +463,7 @@ map <a-8>     tab_open 8
 map <a-9>     tab_open 9
 
 # Sorting
-map or toggle_option sort_reverse
+map or set sort_reverse!
 map oz set sort=random
 map os chain set sort=size;      set sort_reverse=False
 map ob chain set sort=basename;  set sort_reverse=False
@@ -432,18 +486,20 @@ map oE chain set sort=extension; set sort_reverse=True
 map dc get_cumulative_size
 
 # Settings
-map zc    toggle_option collapse_preview
-map zd    toggle_option sort_directories_first
-map zh    toggle_option show_hidden
-map <C-h> toggle_option show_hidden
-map zi    toggle_option flushinput
-map zm    toggle_option mouse_enabled
-map zp    toggle_option preview_files
-map zP    toggle_option preview_directories
-map zs    toggle_option sort_case_insensitive
-map zu    toggle_option autoupdate_cumulative_size
-map zv    toggle_option use_preview_script
+map zc    set collapse_preview!
+map zd    set sort_directories_first!
+map zh    set show_hidden!
+map <C-h> set show_hidden!
+map zI    set flushinput!
+map zi    set preview_images!
+map zm    set mouse_enabled!
+map zp    set preview_files!
+map zP    set preview_directories!
+map zs    set sort_case_insensitive!
+map zu    set autoupdate_cumulative_size!
+map zv    set use_preview_script!
 map zf    console filter%space
+copymap zf zz
 
 # Bookmarks
 map `<any>  enter_bookmark %any
@@ -489,11 +545,14 @@ cmap <left>  eval fm.ui.console.move(left=1)
 cmap <right> eval fm.ui.console.move(right=1)
 cmap <home>  eval fm.ui.console.move(right=0, absolute=True)
 cmap <end>   eval fm.ui.console.move(right=-1, absolute=True)
+cmap <a-left>   eval fm.ui.console.move_word(left=1)
+cmap <a-right>  eval fm.ui.console.move_word(right=1)
 
 # Line Editing
 cmap <backspace>  eval fm.ui.console.delete(-1)
 cmap <delete>     eval fm.ui.console.delete(0)
 cmap <C-w>        eval fm.ui.console.delete_word()
+cmap <A-d>        eval fm.ui.console.delete_word(backward=False)
 cmap <C-k>        eval fm.ui.console.delete_rest(1)
 cmap <C-u>        eval fm.ui.console.delete_rest(-1)
 cmap <C-y>        eval fm.ui.console.paste()
@@ -582,5 +641,18 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
-# FZF
+## CUSTOM AREA
+# map bg shell cp %f ~/.config/wall.png && feh --bg-scale %f
 map <C-f> fzf_select
+map gcs shell wal -t -i %f
+map gkk shell sudo mount /dev/sda1 /media/k2/K
+map gas cd /var/www/sig-arteris
+map gts cd /var/www/tic-sms
+map gaa cd /var/www/api-arteris
+map gqr edit ~/.config/ranger/rc.conf
+map gqp edit ~/.config/polybar/config
+map gqv edit ~/.vimrc
+map gqT edit ~/.config/termite/config
+map gqz edit ~/.zshrc
+map gqt edit ~/.tmux.conf
+map gqi edit ~/.config/i3/config
