Dotfiles | the marvelous world of operator pending maps for VIM

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -406,6 +406,7 @@ map phl paste_hardlink
 map pht paste_hardlinked_subtree
 
 map dD console delete
+map ,d console delete
 
 map dd cut
 map ud uncut
