Um binding por dia faz um homem sábio e feliz

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -226,7 +226,7 @@ set clear_filters_on_dir_change false
 set line_numbers false
 
 # Save tabs on exit
-set save_tabs_on_exit false
+set save_tabs_on_exit true
 
 # Enable scroll wrapping - moving down while on the last item will wrap around to
 # the top and vice versa.
