master | Melhorando mais algumas fitinhas, desculpe a mensagem merda no commit são 4 e 20 da manhã puta sono da porra

--- a/termite/config
+++ b/termite/config
@@ -80,6 +80,6 @@ background = rgba(0, 0, 0, 0.87)
 #padding = 2
 #border = #3f3f3f
 #border_width = 0.5
-#roundness = 2.0
+roundness = 2.0
 
 # vim: ft=dosini cms=#%s
