--- a/i3/config
+++ b/i3/config
@@ -149,8 +149,8 @@ bindsym $mod+Shift+Tab workspace prev
 # exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 bar {
         position top
-        font pango:Source Code Pro for Powerline 10
-        status_command ~/.i3/bumblebee-status/bumblebee-status -m spotify cpu sensors memory battery brightness pasink date time -p date.left-click='gsimplecal' brightness.wheel-up='light -A 5' brightness.wheel-down='light -U 5' -t wal-powerline
+        font pango:Source Code Pro for Powerline 11
+        status_command ~/.i3/bumblebee-status/bumblebee-status -m spotify cpu sensors memory battery brightness pasink date time -p date.left-click='gsimplecal' spotify.format='{title} | {artist}' brightness.wheel-up='light -A 5' brightness.wheel-down='light -U 5' date.format='%d/%m' memory.format='{used}/{total}'  time.format='%H:%M' -t wal-powerline
 }
  exec --no-startup-id compton
  exec --no-startup-id nm-applet
