master | revertendo cagadinha no xsession que fazia o login travar ao jogar o arquivo de erros pra dev/null | relative numbers pra nerdtree <3

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -223,7 +223,7 @@ set metadata_deep_search false
 set clear_filters_on_dir_change false
 
 # Disable displaying line numbers in main column
-set line_numbers false
+set line_numbers relative
 
 # Save tabs on exit
 set save_tabs_on_exit true
@@ -406,7 +406,7 @@ map phl paste_hardlink
 map pht paste_hardlinked_subtree
 
 map dD console delete
-map ,d console delete
+map ,d delete
 
 map dd cut
 map ud uncut
@@ -643,10 +643,8 @@ tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
 ## CUSTOM AREA
-# map bg shell cp %f ~/.config/wall.png && feh --bg-scale %f
-map <C-f> fzf_select
+map ,f fzf_select
 map gcs shell wal -t -i %f
-map gkk shell sudo mount /dev/sda1 /media/k2/K
 map gas cd /var/www/sig-arteris
 map gts cd /var/www/tic-sms
 map gaa cd /var/www/api-arteris
