--- a/i3/config
+++ b/i3/config
@@ -119,10 +119,29 @@ bindsym $mod+Shift+backspace reboot
 bindsym $mod+Shift+o exit
 bindsym $mod+z mode "resize"
 bindsym $mod+s mode "system"
+bindsym $mod+Shift+m mode "music"
+
 bindsym $mod+m exec $term -e mutt
 
 mode "system" {
         bindsym Shift+s exec systemctl poweroff
+        # back to normal: Enter or Escape
+        bindsym Return mode "default"
+        bindsym Space  mode "default"
+        bindsym Escape mode "default"
+}
+
+mode "music" {
+        # todo: bind media keys
+        bindsym k exec amixer -D pulse sset Master 5%+
+        bindsym j exec amixer -D pulse sset Master 5%-
+        
+        bindsym l exec cmus-remote -n
+        bindsym h exec cmus-remote -r
+        bindsym x exec cmus-remote -u
+        bindsym c exec cmus-remote -s
+        bindsym g exec cmus-remote -p
+        bindsym q exec cmus-remote -S
         # back to normal: Enter or Escape
         bindsym Return mode "default"
         bindsym Space  mode "default"
@@ -156,6 +175,8 @@ bindsym $mod+n exec dolphin
 bindsym $mod+Shift+Return exec $term -e tmux
 bindsym $mod+Tab workspace next
 bindsym $mod+Shift+Tab workspace prev
+bindsym XF86MonBrightnessUp exec light -A 5
+bindsym XF86MonBrightnessDown exec light -D 5
 
 bar {
         position top
