master | segurar teclas é um anti pattern.

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -119,7 +119,7 @@ set draw_progress_bar_in_status_bar true
 set draw_borders false
 
 # Display the directory name in tabs?
-set dirname_in_tabs false
+set dirname_in_tabs true
 
 # Enable the mouse support?
 set mouse_enabled true
@@ -197,10 +197,10 @@ set xterm_alt_key false
 set cd_bookmarks true
 
 # Changes case sensitivity for the cd command tab completion
-set cd_tab_case sensitive
+set cd_tab_case insensitive
 
 # Use smart tab completion with less typing? E.g. ":cd /f/b/b<tab>" yields ":cd /foo/bar/baz".
-set cd_tab_smart false
+set cd_tab_smart true
 
 # Avoid previewing files larger than this size, in bytes.  Use a value of 0 to
 # disable this feature.
