--- a/i3/config
+++ b/i3/config
@@ -188,11 +188,11 @@ bindsym $mod+Shift+Tab workspace prev
 
 bar {
         position top
-        font pango:Source Code Pro for Powerline, FontAwesome 11
+        font pango:Source Code Pro for Powerline, FontAwesome 10
         status_command ~/.i3/bumblebee-status/bumblebee-status -m cmus cpu sensors memory battery brightness pasink uptime date-time -p brightness.wheel-up='light -A 5' brightness.wheel-down='light -U 5' cmus.format='{artist} | {title}' date-time.format='%d/%m/%Y | %H:%M' memory.format='{used}({percent:05.02f}%)' -t wal-powerline
 }
 
- exec --no-startup-id compton -c
+ exec --no-startup-id compton -cf
  exec --no-startup-id nm-applet
 
 # PrintScreen
