master | updates on i3conf, bumblebee-status script, ranger, termite and fixes on .vimrc

--- a/i3/config
+++ b/i3/config
@@ -230,7 +230,7 @@ bindsym $mod+Shift+Tab workspace prev
 bar {
         position top
         font pango:Source Code Pro for Powerline, FontAwesome 9
-        status_command ~/.i3/bumblebee-status/bumblebee-status -m cmus cpu sensors memory battery brightness pasink uptime date-time -p brightness.wheel-up='light -A 5' brightness.wheel-down='light -U 5' cmus.format='{artist} | {title}' date-time.format='%d/%m/%Y | %H:%M' memory.format='{used}({percent:05.02f}%)' -t wal-powerline
+        status_command ~/.i3/bumblebee-status/bumblebee-status -m spacer cmus cpu sensors memory battery brightness pasink uptime date-time -p spacer.text='k2@Jupiter' brightness.wheel-up='light -A 5' brightness.wheel-down='light -U 5' cmus.format='{artist} | {title}' date-time.format='%d/%m/%Y | %H:%M' memory.format='{used}({percent:05.02f}%)' -t wal-powerline
 }
 
  exec --no-startup-id compton -cf
