--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -387,6 +387,7 @@ map dU shell -p du --max-depth=1 -h --apparent-size | sort -rh
 map yp yank path
 map yd yank dir
 map yn yank name
+map yc shell cat %f | xsel -bi
 
 # Filesystem Operations
 map =  chmod
