--- a/termite/config
+++ b/termite/config
@@ -4,7 +4,7 @@ allow_bold = true
 #clickable_url = true
 #dynamic_title = true
 font = Source Code Pro for Powerline 10
-#fullscreen = true
+fullscreen = false
 #geometry = 640x480
 #icon_name = terminal
 #mouse_autohide = false
