--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -388,6 +388,7 @@ map yp yank path
 map yd yank dir
 map yn yank name
 map yc shell cat %f | xsel -bi
+map yi shell xclip -selection clipboard -t image/png -i %f
 
 # Filesystem Operations
 map =  chmod
