--- a/polybar/config
+++ b/polybar/config
@@ -24,7 +24,6 @@ height = 27
 ;offset-y = 1%
 radius = 6.0
 fixed-center = false
-
 background = ${colors.background}
 foreground = ${colors.foreground}
 
@@ -46,7 +45,7 @@ font-2 = siji:pixelsize=10;1
 
 modules-left = bspwm i3
 modules-center = 
-modules-right = xbacklight volume xkeyboard memory cpu wlan eth battery temperature date powermenu
+modules-right = xbacklight volume memory cpu wlan eth battery temperature date powermenu
 
 tray-position = right
 tray-padding = 2
