master | ah mano vou ser bem honesto é tanta coisa que não lembrei não mó preguiça de ler os diff também só vai

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -321,7 +321,7 @@ map <F1> help
 map <F2> console rename%space
 map <F3> display_file
 map <F4> edit
-map <F5> copy
+map <F5> eval fm.source(fm.confpath('rc.conf'))
 map <F6> cut
 map <F7> console mkdir%space
 map <F8> console delete
@@ -366,7 +366,7 @@ map )     jump_non
 map gh cd ~
 map ge cd /etc
 map gu cd /usr
-map gd cd /dev
+map gd cd ~/Downloads
 map gl cd -r .
 map gL cd -r %f
 map go cd /opt
@@ -649,6 +649,7 @@ map ,f fzf_select
 map gcs shell wal -t -i %f
 map gas cd /var/www/sig-arteris
 map gts cd /var/www/tic-sms
+map gtt cd ~/HD/Torr/
 map gaa cd /var/www/api-arteris
 map gqr edit ~/.config/ranger/rc.conf
 map gqp edit ~/.config/polybar/config
