--- a/i3/config
+++ b/i3/config
@@ -174,6 +174,8 @@ mode "system" {
 mode "music" {
         # todo: bind media keys
         bindsym k exec amixer -D pulse sset Master 5%+
+        bindsym Shift+k exec amixer -D pulse sset Master 15%+
+        bindsym Shift+j exec amixer -D pulse sset Master 15%-
         bindsym j exec amixer -D pulse sset Master 5%-
         
         bindsym l exec cmus-remote -n
@@ -182,6 +184,7 @@ mode "music" {
         bindsym c exec cmus-remote -s
         bindsym g exec cmus-remote -p
         bindsym q exec cmus-remote -S
+        bindsym s exec cmus-remote -S
         # back to normal: Enter or Escape
         bindsym Return mode "default"
         bindsym Space  mode "default"
@@ -226,14 +229,15 @@ bindsym $mod+Shift+Tab workspace prev
 
 bar {
         position top
-        font pango:Meslo LG M dz for Powerline, FontAwesome 9
-        status_command ~/.i3/bumblebee-status/bumblebee-status -m cmus cpu sensors memory battery brightness pasink date-time -p brightness.wheel-up='light -A 5' brightness.wheel-down='light -U 5' cmus.format='{artist} | {title}' date-time.format='%d/%m | %H:%M' memory.format='{used}' -t wal-powerline
+        font pango:Meslo LG M dz for Powerline, FontAwesome 10
+        status_command ~/.i3/bumblebee-status/bumblebee-status -m spacer cmus cpu sensors memory battery brightness pasink date-time -p spacer.text='Iniciar'  spacer.left-click='rofi -show run -opacity "75"' brightness.wheel-up='light -A 5' brightness.wheel-down='light -U 5' cmus.format='{artist} | {title}' date-time.format='%d/%m | %H:%M' memory.format='{used}' -t wal-powerline
 }
  exec --no-startup-id compton -cf
  exec --no-startup-id nm-applet
 
 # PrintScreen
  bindsym --release Print exec scrot -s ~/prints/print_%d_%m_%Y_%T.png
+ bindsym --release Shift+Print exec scrot ~/prints/print_%d_%m_%Y_%T.png
  
 
 gaps inner 10
