--- a/i3/config
+++ b/i3/config
@@ -50,7 +50,7 @@ bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
 # Custom Launchers k2
-bindsym $mod+Shift+f exec google-chrome
+bindsym $mod+Shift+f exec firefox
 bindsym $mod+Shift+p exec pgadmin3
 bindsym $mod+Shift+t exec qbittorrent
 
@@ -84,7 +84,7 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 # focus the child container
-#bindsym $mod+d focus child
+#bindsym $mod+Shift+a focus child
 
 # switch to workspace
 bindsym $mod+1 workspace 1
@@ -234,6 +234,7 @@ bar {
 }
  exec --no-startup-id compton -cf
  exec --no-startup-id nm-applet
+ exec --no-startup-id fluxgui
 
 # PrintScreen
  bindsym --release Print exec scrot -s ~/prints/print_%d_%m_%Y_%T.png
