--- a/i3/config
+++ b/i3/config
@@ -127,6 +127,8 @@ set $mode_gaps Gaps: (o) outer, (i) inner
 set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
 set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
 
+popup_during_fullscreen smart
+
 mode "$mode_gaps" {
         bindsym o      mode "$mode_gaps_outer"
         bindsym i      mode "$mode_gaps_inner"
@@ -145,6 +147,7 @@ mode "$mode_gaps_inner" {
 
         bindsym Return mode "default"
         bindsym Escape mode "default"
+        bindsym Tab mode "$mode_gaps_outer"
 }
 
 mode "$mode_gaps_outer" {
@@ -158,6 +161,7 @@ mode "$mode_gaps_outer" {
 
         bindsym Return mode "default"
         bindsym Escape mode "default"
+        bindsym Tab mode "$mode_gaps_inner"
 }
 
 bindsym $mod+m exec $term -e mutt
@@ -220,32 +224,25 @@ mode "resize" {
 }
 
 set $term termite
-set $transparent #00000000
 
 bindsym $mod+r exec $term -e ranger
 bindsym $mod+n exec dolphin
 bindsym $mod+Shift+Return exec $term -e tmux
 bindsym $mod+Tab workspace next
 bindsym $mod+Shift+Tab workspace prev
-
-bar {
-        position top
-
-        font pango:Meslo LG M dz for Powerline, FontAwesome 10
-
-        status_command ~/.i3/bumblebee-status/bumblebee-status -m xrandr cmus cpu sensors memory battery brightness pasink date-time -p brightness.wheel-up='light -A 5' brightness.wheel-down='light -U 5' cmus.format='{artist} | {title}' date-time.format='%d/%m | %H:%M' memory.format='{used}' -t wal-powerline
-
-        colors {
-            background $transparent
-            }
-}
- exec --no-startup-id compton -cf
- exec --no-startup-id nm-applet
-
-# PrintScreen
- bindsym --release Print exec scrot -s ~/prints/print_%d_%m_%Y_%T.png
- bindsym --release Shift+Print exec scrot ~/prints/print_%d_%m_%Y_%T.png
- 
-
+bindsym --release Print exec scrot -s ~/prints/print_%d_%m_%Y_%T.png
+bindsym --release Shift+Print exec scrot ~/prints/print_%d_%m_%Y_%T.png
 gaps inner 10
 gaps outer 10
+
+ bar {
+         position top
+
+         font pango:Meslo LG M dz for Powerline, FontAwesome 10
+
+         status_command ~/.i3/bumblebee-status/bumblebee-status -m xrandr cmus cpu sensors memory battery brightness pasink date-time -p brightness.wheel-up='light -A 5' brightness.wheel-down='light -U 5' cmus.format='{artist} | {title}' date-time.format='%d/%m | %H:%M' memory.format='{used}' -t wal-powerline
+ }
+
+
+exec --no-startup-id compton -cfb
+exec --no-startup-id nm-applet
