master | perl extensions for urxvt, melhorando alguns mappings do VIM, updates do pywal

--- a/i3/config
+++ b/i3/config
@@ -262,6 +262,6 @@ exec --no-startup-id nm-applet
 
          font pango:Meslo LG M dz for Powerline, FontAwesome 10
 
-         status_command ~/.i3/bumblebee-status/bumblebee-status -m mpd cpu sensors memory battery brightness pasink date-time -p brightness.wheel-up='light -A 5' brightness.wheel-down='light -U 5' date-time.format='%d/%m | %H:%M' memory.format='{used}' -t wal-powerline
+         status_command ~/.i3/bumblebee-status/bumblebee-status -m xrandr mpd cpu sensors memory battery brightness pasink date-time -p brightness.wheel-up='light -A 5' brightness.wheel-down='light -U 5' date-time.format='%d/%m | %H:%M' memory.format='{used}' -t wal-powerline
  }
 
