--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -286,7 +286,7 @@ map i display_file
 map ? help
 map W display_log
 map w taskview_open
-map S shell $SHELL
+map <Backspace> shell $SHELL
 
 map :  console
 map ;  console
@@ -647,6 +647,7 @@ copytmap <ESC> q Q w <C-c>
 ## CUSTOM AREA
 map ,f fzf_select
 map gcs shell wal -t -i %f
+map gsp shell rtmpdump -r $(<%f) -o test.mp4
 map gas cd /var/www/sig-arteris
 map gts cd /var/www/tic-sms
 map gtt cd ~/HD/Torr/
