--- a/polybar/config
+++ b/polybar/config
@@ -12,9 +12,9 @@ background = ${xrdb:color2}
 background-alt = ${xrdb:color3}
 foreground = ${xrdb:color7}
 foreground-alt = ${xrdb:color8}
-primary = ${xrdb:color9}
-secondary = ${xrdb:color10}
-alert = ${xrdb:color11}
+primary = ${xrdb:color7}
+secondary = ${xrdb:color6}
+alert = ${xrdb:color5}
 
 [bar/example]
 ;monitor = ${env:MONITOR:HDMI-1}
@@ -22,7 +22,7 @@ width = 100%
 height = 27
 ;offset-x = 1%
 ;offset-y = 1%
-radius = 6.0
+radius = 0.0
 fixed-center = false
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -30,7 +30,7 @@ foreground = ${colors.foreground}
 line-size = 3
 line-color = #f00
 
-border-size = 4
+border-size = 0
 border-color = #00000000
 
 padding-left = 0
@@ -43,13 +43,13 @@ font-0 = fixed:pixelsize=10;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 
-modules-left = bspwm i3
+modules-left = i3
 modules-center = 
-modules-right = xbacklight volume memory cpu wlan eth battery temperature date powermenu
+modules-right = xbacklight mpd memory cpu battery temperature date powermenu volume wlan  
 
 tray-position = right
 tray-padding = 2
-;tray-transparent = true
+tray-transparent = false
 ;tray-background = #0063ff
 
 ;wm-restack = bspwm
@@ -116,7 +116,14 @@ label-empty-padding = 2
 type = internal/i3
 format = <label-state> <label-mode>
 index-sort = true
+fuzzy-match = true
 wrapping-scroll = false
+ws-icon-0 = 1;♚
+ws-icon-1 = 2;♛
+ws-icon-2 = 3;♜
+ws-icon-3 = 4;♝
+ws-icon-4 = 5;♞
+ws-icon-default = ♟
 
 ; Only show workspaces on the same output as the bar
 ;pin-workspaces = true
@@ -187,7 +194,7 @@ interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = ${xrdb:color1}
-label = %percentage%%
+label = CPU %percentage%%
 
 [module/memory]
 type = internal/memory
@@ -195,7 +202,7 @@ interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = ${xrdb:color9}
-label = %percentage_used%%
+label = %mb_used%/%gb_total%
 
 [module/wlan]
 type = internal/network
